--- a/404.html
+++ b/404.html
@@ -22,12 +22,12 @@
 				document.documentElement.classList.toggle('dark', true);
 			}
     </script>
-    <title>Techless 文档</title><meta name="description" content="记录学习过程、文档">
-    <link rel="modulepreload" href="/assets/app.79dcdc63.js"><link rel="modulepreload" href="/assets/404.html.f166316b.js"><link rel="modulepreload" href="/assets/404.html.dd785d89.js">
+    <title>Techless Doc</title><meta name="description" content="记录学习过程、文档">
+    <link rel="modulepreload" href="/assets/app.315632ba.js"><link rel="modulepreload" href="/assets/404.html.f166316b.js"><link rel="modulepreload" href="/assets/404.html.822a4bee.js">
     <link rel="stylesheet" href="/assets/style.39d5bbe5.css">
   </head>
   <body>
     <div id="app"><!--[--><div class="theme-container"><div class="theme-default-content"><h1>404</h1><blockquote>How did we get here?</blockquote><a href="/" class="">Take me home</a></div></div><!----><!--]--></div>
-    <script type="module" src="/assets/app.79dcdc63.js" defer></script>
+    <script type="module" src="/assets/app.315632ba.js" defer></script>
   </body>
 </html>
