--- a/404.html
+++ b/404.html
@@ -23,11 +23,11 @@
 			}
     </script>
     <title>Techless Doc</title><meta name="description" content="记录学习过程、文档">
-    <link rel="modulepreload" href="/assets/app.352efc63.js"><link rel="modulepreload" href="/assets/404.html.f166316b.js"><link rel="modulepreload" href="/assets/404.html.4cd74d9c.js">
+    <link rel="modulepreload" href="/assets/app.22cf3675.js"><link rel="modulepreload" href="/assets/404.html.f166316b.js"><link rel="modulepreload" href="/assets/404.html.122f9eb1.js">
     <link rel="stylesheet" href="/assets/style.39d5bbe5.css">
   </head>
   <body>
-    <div id="app"><!--[--><div class="theme-container"><div class="theme-default-content"><h1>404</h1><blockquote>There&#39;s nothing here.</blockquote><a href="/" class="">Take me home</a></div></div><!----><!--]--></div>
-    <script type="module" src="/assets/app.352efc63.js" defer></script>
+    <div id="app"><!--[--><div class="theme-container"><div class="theme-default-content"><h1>404</h1><blockquote>That&#39;s a Four-Oh-Four.</blockquote><a href="/" class="">Take me home</a></div></div><!----><!--]--></div>
+    <script type="module" src="/assets/app.22cf3675.js" defer></script>
   </body>
 </html>
